syntax="proto3";

package socialnetwork;
option go_package = "github.com/raudel25/social-network-distributed-system/pkg/services/users;users_pb";

service UserService{
    // Get a user
    rpc GetUser(GetUserRequest) returns (GetUserResponse){}

    // Edit user's data
    rpc EditUser(EditUserRequest) returns (EditUserResponse){}
}

message User {
    string username = 1;
    string name = 2;
    string passwordHash = 3;
    string email = 4;
}

message GetUserRequest {
    string username = 1;
}

message GetUserResponse {
    User user = 1;
}

message EditUserRequest {
    User user = 1;
}

message EditUserResponse{
}
